--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-  <body ng-controller="mainCtrl">
+  <body ng-controller="mainCtrl as app">
+    
     <div class="main-container">
-      <h1> DevMountain Chat Room </h1>
-      <form ng-submit="postData()">
-        <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
+      <h1> My Own Private Chat Room </h1>
+      <input class="filterText" ng-model="app.filter" placeholder="filter messages"/>
+      <button ng-model="app.sort" on-click="app.sort()" value="false">sort</button>
+      <form ng-submit="app.postData(app.message)">
+        <input class="form-control text-box" type="text" ng-model="app.message" placeholder="Message">
       </form>
       <div class="messages-container">
-        <p ng-repeat="message in messages"> {{message.text}} </p>
+        <div class="message" ng-repeat="message in app.messages | filter: app.filter | orderBy:message.createdAt:app.sort">
+          <p> {{message.text}} <span class="date">{{message.createdAt | date:'short'}}</span></p>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
@@ -20,6 +25,6 @@
     <script src="js/app.js"></script>
     <script src="js/mainCtrl.js"></script>
     <script src="js/parseService.js"></script>
-    <script src="js/defaultHeaders.js"></script>
+    <script src="js/defaultHeaders2.js"></script>
   </body>
 </html>
